# zephyr-model-based-testing

./: .gitignore  .pre-commit-config.yaml  README.md
.devcontainer/: .bash_aliases  Dockerfile  devcontainer.json  post_start.sh  setup.sh
scripts/pre-commit-hooks/: remove_pluscal_translation.sh
specs/lib/: Errno.tla  PriorityQueues.tla  TestGenUtils.tla
specs/mutexes/: MutexInvariants.tla  MutexTestGen.tla  MutexTrapProperties.tla  Mutexes.cfg  Mutexes.tla  MutexesMBT.cfg
specs/semaphores/: SemaphoreInvariants.tla  SemaphoreTestGen.tla  SemaphoreTrapProperties.tla  Semaphores.cfg  Semaphores.tla  SemaphoresMBT.cfg
ztest-gen/: README.md  pyproject.toml
ztest-gen/src/ztest_gen/: interpreted_counterexample.py  main.py  parse.py  tlaplus_values.py  tlc_counterexample.py  zephyr_test_case.py  zephyr_test_suite.py
ztest-gen/src/ztest_gen/ztest_gen/: __init__.py
ztest-gen/tests/: test_interpreted_counterexample.py  test_interpreted_counterexample_state.py  test_tlaplus_values.py  test_tlc_counterexample.py
